# ivos

./: README.md
01_processes/: meson.build
01_processes/src/: aba.cpp  charout.cpp
02_threads/: meson.build
02_threads/src/: cars.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/inlcude/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: loadsim.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h  semaphore.h
05_sync3/src/: main.cpp  philosopher.cpp  semaphore.cpp
06_future/: meson.build
06_future/include/: calc_factors.h
06_future/src/: main.cpp
07_berkeley/: meson.build  meson_options.txt
07_berkeley/include/: clock.h  pipe.h  println.h  timeutils.h
07_berkeley/src/: clock.cpp  main.cpp
